--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -3,16 +3,28 @@
         <title>form</title>
         
     </head>
-    <body>
+    <body bgcolor="yellow">
+        <script src="/js/index.js"></script>
         <form action="/new" method="POST">
         <label for="email">Email</label>
-        <input type="email" name="email"/><br>
-        <label for="name">Name</label>
-        <input type="text" name="name"/><br>
+        <br>
+        <input type="email"id="em" name="email" required><br>
+        <br>
+        <label for="name">Name</label><br>
+        <input type="text" name="name" id="name" required/><br>
+        <br>
         <label for="age">Age</label>
-        <input type="number" name="age"/><br>
-        <input type="submit" id="getusers"/>
-    </form>
+        <br>
+        <input type="number" name="age" id="age" isrequired/><br>
+        <br>
+        <input type="submit">
+        </form>
+        <!-- <div id="list" cellspacing="3" cellpadding="3" border="1"></thead>
+        <tr>
+            <td>Email</td><td>name</td><td>age</td>
+            </tr></thead>
+            <tbody></tbody></table></tbody>
+        </div> -->
     </body>
-    </hedad>
+    </head>
 </html>
